--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Usama Asghar Portfolio</title>
 </head>
 <body>
-	<nav>
+	<nav class="wrapper">
 		<ul>
 			<li>home</li>
 			<li>about me</li>
@@ -17,8 +17,72 @@
 			<li>not sure yet</li>
 		</ul>
 	</nav>
-	<header>
-		<h1>Usama Asghar</h1>
+	<header class="wrapper">
+		<h1>I'm<span>Usama Asghar</span>A front-end web developer</h1>
+		<button>check me out</button>
 	</header>
+	<section class="wrapper">
+		<h2>about</h2>
+		<div class="aboutContainer">
+			<div class="bioContainer">
+				<h3>bio</h3>
+				<p>I'm a front-end web developer based in Toronto. I come from an IT
+					background with an emphasis on customer service. I have been ingrained
+					with the philosophy that client satisfaction is undoubtedly the most
+					important aspect of any business. My mission now is to secure a position
+					with a reputable company where I can be a member of a team and utilize
+					my knowledge, strong resoursefulness and previous work experience to
+					help the company advance efficiently and productively.</p>
+			</div>
+			<div class="skillsContainer">
+				<h3>skills</h3>
+				<ul class="mySkills">
+					<li>
+						<h4>HTML5</h4>
+					</li>
+					<li>
+						<h4>CSS3</h4>
+					</li>
+					<li>
+						<h4>SASS</h4>
+					</li>
+					<li>
+						<h4>Javascript</h4>
+					</li>
+					<li>
+						<h4>JQuery</h4>
+					</li>
+					<li>
+						<h4>React</h4>
+					</li>
+					<li>
+						<h4>Firebase</h4>
+					</li>
+					<li>
+						<h4>Git</h4>
+					</li>
+					<li>
+						<h4>GitHub</h4>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section class="projects wrapper">
+		<div class="portfolioPeices">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+	</section>
+	<section class="contact wrapper">
+		<form action="">
+
+		</form>
+	</section>
+	<footer>
+
+	</footer>
+	<script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 </body>
 </html>
