Added some Javascript

--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 <body>
 	<nav class="navContainer">
 		<ul class="wrapper">
-			<li><a href="">home</a></li>
-			<li><a href="">about</a></li>
-			<li><a href="">projects</a></li>
-			<li><a href="">contact</a></li>
+			<li><a href="" class="homeLink">home</a></li>
+			<li><a href="" class="aboutLink">about</a></li>
+			<li><a href="" class="projectsLink">projects</a></li>
+			<li><a href="" class="contactLink">contact</a></li>
 		</ul>
 	</nav>
-	<header class="wrapper">
-		<h1>I'm <span>Usama Asghar</span> <br> A front-end web developer</h1>
-		<div>
-			<button>check me out</button>
+	<header>
+		<img src="./styles/assets/ua.png" alt="Personal logo">
+		<div class="clouds"></div>
+		<div class="headerInfoContainer wrapper">
+			<h1>I'm <span>Usama Asghar</span> <br> A front-end web developer</h1>
+			<div>
+				<button class="start">check me out</button>
+			</div>
 		</div>
 	</header>
 	<section class="about wrapper">
@@ -28,6 +32,7 @@
 		<div class="aboutContainer">
 			<div class="bioContainer">
 				<h3>bio</h3>
+				<img src="./styles/assets/me.jpg" alt="A picture of myself">
 				<p>I'm a front-end web developer based in Toronto. I come from an IT
 					background with an emphasis on customer service. I have been ingrained
 					with the philosophy that client satisfaction is undoubtedly the most
@@ -35,33 +40,34 @@
 					with a reputable company where I can be a member of a team and utilize
 					my knowledge, strong resoursefulness and previous work experience to
 					help the company advance efficiently and productively.</p>
+				<a href="./styles/assets/Usama-Asghar-Resume.pdf">see my resume</a>
 			</div>
 			<div class="skillsContainer">
 				<h3>skills</h3>
 				<ul class="mySkills">
 					<li>
 						<img src="./styles/assets/html5.svg" alt="HTML5 logo">
-						<!-- <h4>HTML5</h4> -->
+						<h4>HTML5</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/css-5.svg" alt="CSS3 logo">
-						<!-- <h4>CSS3</h4> -->
+						<h4>CSS3</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/sass-1.svg" alt="SASS logo">
-						<!-- <h4>SASS</h4> -->
+						<h4>SASS</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/logo-javascript.svg" alt="Javascript logo">
-						<!-- <h4>Javascript</h4> -->
+						<h4>Javascript</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/jquery-1.svg" alt="jquery logo">
-						<!-- <h4>JQuery</h4> -->
+						<h4>JQuery</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/react-2.svg" alt="React logo">
-						<!-- <h4>React</h4> -->
+						<h4>React</h4>
 					</li>
 					<li>
 						<img src="./styles/assets/firebase-1.svg" alt="Firebase logo">
@@ -79,80 +85,85 @@
 			</div>
 		</div>
 	</section>
-	<section class="projects wrapper">
-		<h2>projects</h2>
-		<div class="projectsContainer">
-			<div>
-				<h3>guitar chords app</h3>
-				<div class="guitarApp">
-					<img src="./styles/assets/guitarApp.png" alt="">
-					<div class="guitarAppOverlay">
-						<p>
-							An app built with React that shows users pictures of how to play guitar
-							chords.
-						</p>
-						<button>
-							<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
-						</button>
+	<section class="projects">
+		<div class="wrapper">
+			<h2>projects</h2>
+			<div class="projectsContainer">
+				<div>
+					<h3>guitar chords app</h3>
+					<div class="guitarApp">
+						<img src="./styles/assets/guitarApp.png" alt="">
+						<div class="guitarAppOverlay">
+							<p>
+								An app built with React that shows users pictures of how to play guitar
+								chords.
+							</p>
+							<button>
+								<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
+							</button>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div>
-				<h3>guitar chords app</h3>
-				<div class="guitarApp">
-					<img src="./styles/assets/guitarApp.png" alt="">
-					<div class="guitarAppOverlay">
-						<p>
-							An app built with React that shows users pictures of how to play guitar
-							chords.
-						</p>
-						<button>
-							<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
-						</button>
+				<div>
+					<h3>guitar chords app</h3>
+					<div class="guitarApp">
+						<img src="./styles/assets/guitarApp.png" alt="">
+						<div class="guitarAppOverlay">
+							<p>
+								An app built with React that shows users pictures of how to play guitar
+								chords.
+							</p>
+							<button>
+								<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
+							</button>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div>
-				<h3>guitar chords app</h3>
-				<div class="guitarApp">
-					<img src="./styles/assets/guitarApp.png" alt="">
-					<div class="guitarAppOverlay">
-						<p>
-							An app built with React that shows users pictures of how to play guitar
-							chords.
-						</p>
-						<button>
-							<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
-						</button>
+				<div>
+					<h3>guitar chords app</h3>
+					<div class="guitarApp">
+						<img src="./styles/assets/guitarApp.png" alt="">
+						<div class="guitarAppOverlay">
+							<p>
+								An app built with React that shows users pictures of how to play guitar
+								chords.
+							</p>
+							<button>
+								<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="contactContainer wrapper">
+	<section class="contact wrapper">
 		<h2>Contact</h2>
-		<form class="contact">
-			<div class="personalInfo">
-				<label for="name"></label>
-				<input type="text" id="name" placeholder="Your Name">
-				<label for="email"></label>
-				<input type="email" id="email" placeholder="Your Email address">
-			</div>
+		<form class="contactContainer">
+			<label for="name"></label>
+			<input type="text" id="name" placeholder="Your Name">
+			<label for="email"></label>
+			<input type="email" id="email" placeholder="Your Email address">
 			<label for="message"></label>
 			<textarea id="message" placeholder="Message" rows="10" cols="50"></textarea>
 			<label for="submit"></label>
 			<input type="submit" id="submit" value="Submit">
     </form>
 	</section>
-	<footer>
-		<div class="icons">
-				<i class="fab fa-facebook-f"></i>
-				<i class="fab fa-twitter"></i>
-				<i class="fab fa-instagram"></i>
-				<i class="fab fa-github"></i>
+	<footer class="footerContainer">
+		<div class="wrapper">
+			<div class="name">
+				<p>Usama Asghar</p>
+			</div>
+			<div class="icons">
+				<a href=""><i class="fab fa-twitter"></i></a>
+				<a href=""><i class="fab fa-github"></i></a>
+				<a href=""><i class="fab fa-linkedin"></i></a>
+			</div>
 		</div>
 	</footer>
 	<script src="https://kit.fontawesome.com/4f75015cbc.js" crossorigin="anonymous"></script>
-	<script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="./styles/assets/scripts/scripts.js"></script>
 </body>
 </html>
