Added Media Queries

--- a/index.html
+++ b/index.html
@@ -28,18 +28,13 @@
 		</div>
 	</header>
 	<section class="about wrapper">
+		<a href="" class="toTop">back to top</a>
 		<h2>about</h2>
 		<div class="aboutContainer">
 			<div class="bioContainer">
 				<h3>bio</h3>
 				<img src="./styles/assets/me.jpg" alt="A picture of myself">
-				<p>I'm a front-end web developer based in Toronto. I come from an IT
-					background with an emphasis on customer service. I have been ingrained
-					with the philosophy that client satisfaction is undoubtedly the most
-					important aspect of any business. My mission now is to secure a position
-					with a reputable company where I can be a member of a team and utilize
-					my knowledge, strong resoursefulness and previous work experience to
-					help the company advance efficiently and productively.</p>
+				<p>I'm a front-end web developer based in Toronto. Coming from an IT background with an emphasis on customer service, I take great pride in creating impactful, accessible and user-friendly web applications. </p>
 				<a href="./styles/assets/Usama-Asghar-Resume.pdf">see my resume</a>
 			</div>
 			<div class="skillsContainer">
@@ -86,14 +81,16 @@
 		</div>
 	</section>
 	<section class="projects">
-		<div class="wrapper">
+		<div class="toTopContainer wrapper">
+			<a href="" class="toTop">back to top</a>
 			<h2>projects</h2>
+			<p>Hover over images to learn more.</p>
 			<div class="projectsContainer">
 				<div>
 					<h3>guitar chords app</h3>
-					<div class="guitarApp">
+					<div class="app">
 						<img src="./styles/assets/guitarApp.png" alt="">
-						<div class="guitarAppOverlay">
+						<div class="appOverlay">
 							<p>
 								An app built with React that shows users pictures of how to play guitar
 								chords.
@@ -105,31 +102,31 @@
 					</div>
 				</div>
 				<div>
-					<h3>guitar chords app</h3>
-					<div class="guitarApp">
-						<img src="./styles/assets/guitarApp.png" alt="">
-						<div class="guitarAppOverlay">
+					<h3>game of thrones quiz</h3>
+					<div class="app">
+						<img src="./styles/assets/GOTQuiz.png" alt="">
+						<div class="appOverlay">
 							<p>
 								An app built with React that shows users pictures of how to play guitar
 								chords.
 							</p>
 							<button>
-								<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
+								<a href="https://sam27131.github.io/usamaAsgharProjectThree/">Check out the app!</a>
 							</button>
 						</div>
 					</div>
 				</div>
 				<div>
-					<h3>guitar chords app</h3>
-					<div class="guitarApp">
-						<img src="./styles/assets/guitarApp.png" alt="">
-						<div class="guitarAppOverlay">
+					<h3>pokemon team builder</h3>
+					<div class="app">
+						<img src="./styles/assets/pokemon.png" alt="">
+						<div class="appOverlay">
 							<p>
 								An app built with React that shows users pictures of how to play guitar
 								chords.
 							</p>
 							<button>
-								<a href="https://sam27131.github.io/usamaAsgharProjectFive/">Check out the app!</a>
+								<a href="http://helloim.cc/pokemonteambuilder/">Check out the app!</a>
 							</button>
 						</div>
 					</div>
@@ -138,6 +135,7 @@
 		</div>
 	</section>
 	<section class="contact wrapper">
+		<a href="" class="toTop">back to top</a>
 		<h2>Contact</h2>
 		<form class="contactContainer">
 			<label for="name"></label>
