--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Usama Asghar Portfolio</title>
 </head>
 <body>
+	<!-- Nav -->
 	<label for="toggle"><i class="fas fa-bars"></i></label>
 	<input type="checkbox" id="toggle" name="toggle" />
 	<nav class="navContainer">
@@ -19,6 +20,9 @@
 			<li><a href="" class="contactLink">contact</a></li>
 		</ul>
 	</nav>
+
+	<!-- Header -->
+
 	<header>
 		<img src="./styles/assets/ua.png" alt="Personal logo">
 		<div class="clouds"></div>
@@ -29,6 +33,9 @@
 			</div>
 		</div>
 	</header>
+
+	<!-- About Me Section -->
+
 	<section class="about wrapper">
 		<a href="" class="toTop">back to top</a>
 		<h2>about</h2>
@@ -82,6 +89,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Featured Work / Projects Section -->
+
 	<section class="projects">
 		<div class="toTopContainer wrapper">
 			<a href="" class="toTop">back to top</a>
@@ -153,9 +163,16 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- Contact Section -->
+
 	<section class="contact wrapper">
 		<a href="" class="toTop">back to top</a>
 		<h2>Contact</h2>
+		<div class="getInTouch">
+			<a href="mailto:usama_a123@hotmail.com"><img src="./styles/assets/mail-ios.svg" alt="Mail Icon">usama_a123@hotmail.com</a>
+			<a href="tel:6475422713"><img src="./styles/assets/phone-icon.svg" alt="">(647) 542-2713</a>
+		</div>
 		<form 
 		action="mailto:usama_a123@hotmail.com" 
 		method=”POST”
@@ -173,10 +190,13 @@
 			<input type="submit" id="submit" value="Submit">
     </form>
 	</section>
+
+	<!-- Footer Section -->
+
 	<footer class="footerContainer">
 		<div class="wrapper">
 			<div>
-				<p>Built from the blood, sweat and tears of Usama Asghar</p>
+				<p>🤘 Built by Usama Asghar 🤘</p>
 			</div>
 			<div class="icons">
 				<a href="https://twitter.com/SamwiseCoding"><i class="fab fa-twitter"></i></a>
@@ -185,6 +205,9 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Scripts -->
+	
 	<script src="https://kit.fontawesome.com/4f75015cbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./styles/assets/scripts/scripts.js"></script>
