Some more styling changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 	<!-- About Me Section -->
 
 	<section class="about wrapper">
-		<a href="" class="toTop">back to top</a>
 		<h2>about</h2>
 		<div class="aboutContainer">
 			<div class="bioContainer">
@@ -94,7 +93,6 @@
 
 	<section class="projects">
 		<div class="toTopContainer wrapper">
-			<a href="" class="toTop">back to top</a>
 			<h2>projects</h2>
 			<div class="projectsContainer">
 				<div class="app">
@@ -173,6 +171,7 @@
 			<a href="mailto:usama_a123@hotmail.com"><img src="./styles/assets/mail-ios.svg" alt="Mail Icon">usama_a123@hotmail.com</a>
 			<a href="tel:6475422713"><img src="./styles/assets/phone-icon.svg" alt="">(647) 542-2713</a>
 		</div>
+		<p>Send me a message below!</p>
 		<form 
 		action="mailto:usama_a123@hotmail.com" 
 		method=”POST”
@@ -207,7 +206,7 @@
 	</footer>
 
 	<!-- Scripts -->
-	
+
 	<script src="https://kit.fontawesome.com/4f75015cbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="./styles/assets/scripts/scripts.js"></script>
