--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./styles/style.css">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<title>Usama Asghar Portfolio</title>
 </head>
 <body>
@@ -41,46 +42,46 @@
 		<div class="aboutContainer">
 			<div class="bioContainer">
 				<h3>bio</h3>
-				<img src="./styles/assets/me.jpg" alt="A picture of myself">
+				<img src="./styles/assets/me.jpg" alt="A picture of myself" data-aos="flip-left" data-aos-duration="1000">
 				<p>I'm a front-end web developer based in Toronto. Coming from an IT background with an emphasis on customer service, I take great pride in creating impactful, accessible and user-friendly web applications. </p>
 				<a href="./styles/assets/Usama-Asghar-Resume.pdf">see my resume</a>
 			</div>
 			<div class="skillsContainer">
 				<h3>skills</h3>
 				<ul class="mySkills">
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/html5.svg" alt="HTML5 logo">
 						<h4>HTML5</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/css-5.svg" alt="CSS3 logo">
 						<h4>CSS3</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/sass-1.svg" alt="SASS logo">
 						<h4>SASS</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/logo-javascript.svg" alt="Javascript logo">
 						<h4>Javascript</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/jquery-1.svg" alt="jquery logo">
 						<h4>JQuery</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/react-2.svg" alt="React logo">
 						<h4>React</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/firebase-1.svg" alt="Firebase logo">
 						<h4>Firebase</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/git-icon.svg" alt="Git logo">
 						<h4>Git</h4>
 					</li>
-					<li>
+					<li data-aos="fade-left" data-aos-duration="1000">
 						<img src="./styles/assets/github-1.svg" alt="GitHub logo">
 						<h4>GitHub</h4>
 					</li>
@@ -96,7 +97,7 @@
 			<h2>projects</h2>
 			<div class="projectsContainer">
 				<div class="app">
-					<img src="./styles/assets/guitarApp.png" alt="">
+					<img src="./styles/assets/guitarApp.png" alt="" data-aos="fade-up-right" data-aos-duration="1000">
 					<div class="appInfo">
 						<h3>guitar chords app</h3>
 						<p>
@@ -135,10 +136,10 @@
 							<a href="https://github.com/Sam27131/usamaAsgharProjectThree.git">github</a>
 						</button>
 					</div>
-					<img src="./styles/assets/GOTQuiz.png" alt="">
+					<img src="./styles/assets/GOTQuiz.png" alt="" data-aos="fade-up-left" data-aos-duration="1000">
 				</div>
 				<div class="app">
-					<img src="./styles/assets/pokemon.png" alt="">
+					<img src="./styles/assets/pokemon.png" alt="" data-aos="fade-up-right" data-aos-duration="1000">
 					<div class="appInfo">
 						<h3>pokemon team builder</h3>
 						<p>
@@ -168,8 +169,8 @@
 		<a href="" class="toTop">back to top</a>
 		<h2>Contact</h2>
 		<div class="getInTouch">
-			<a href="mailto:usama_a123@hotmail.com"><img src="./styles/assets/mail-ios.svg" alt="Mail Icon">usama_a123@hotmail.com</a>
-			<a href="tel:6475422713"><img src="./styles/assets/phone-icon.svg" alt="">(647) 542-2713</a>
+			<a href="mailto:usama_a123@hotmail.com" data-aos="zoom-in" data-aos-duration="1000"><img src="./styles/assets/mail-ios.svg" alt="Mail Icon">usama_a123@hotmail.com</a>
+			<a href="tel:6475422713" data-aos="zoom-in" data-aos-duration="1000"><img src="./styles/assets/phone-icon.svg" alt="">(647) 542-2713</a>
 		</div>
 		<p>Send me a message below!</p>
 		<form 
@@ -209,6 +210,7 @@
 
 	<script src="https://kit.fontawesome.com/4f75015cbc.js" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="./styles/assets/scripts/scripts.js"></script>
 </body>
 </html>
