Added some slide effects on elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<label for="toggle"><i class="fas fa-bars"></i></label>
 	<input type="checkbox" id="toggle" name="toggle" />
 	<nav class="navContainer">
-		<ul class="wrapper navLinks">
+		<ul class="wrapper navLinks" data-aos="fade-left" data-aos-duration="1500">
 			<li><a href="" class="homeLink">home</a></li>
 			<li><a href="" class="aboutLink">about</a></li>
 			<li><a href="" class="projectsLink">projects</a></li>
@@ -28,7 +28,7 @@
 		<img src="./styles/assets/ua.png" alt="Personal logo">
 		<div class="clouds"></div>
 		<div class="headerInfoContainer wrapper">
-			<h1>I'm <span>Usama Asghar</span> <br> A front-end web developer</h1>
+			<h1 data-aos="fade-right" data-aos-duration="1500">I'm <span>Usama Asghar</span> <br> A front-end web developer</h1>
 			<div>
 				<button class="start">check me out</button>
 			</div>
@@ -170,7 +170,6 @@
 		<h2>Contact</h2>
 		<div class="getInTouch">
 			<a href="mailto:usama_a123@hotmail.com" data-aos="zoom-in" data-aos-duration="1000"><img src="./styles/assets/mail-ios.svg" alt="Mail Icon">usama_a123@hotmail.com</a>
-			<a href="tel:6475422713" data-aos="zoom-in" data-aos-duration="1000"><img src="./styles/assets/phone-icon.svg" alt="">(647) 542-2713</a>
 		</div>
 		<p>Send me a message below!</p>
 		<form 
